<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>realsense_launch</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="matthew.shields.1986@gmail.com">matthew</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>image_proc</depend>
  <depend>depth_image_proc</depend>
  <depend>rosbag2</depend>
  <depend>rosbag2_transport</depend>
  <depend>realsense2_camera</depend>
  <depend>realsense2_camera_msgs</depend>
  <depend>realsense2_description</depend>
  <depend>ament_index_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
